<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory android:title="Settings">
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
    />

    <ListPreference
        android:key="@string/pref_temp_key"
        android:title="@string/pref_temp_title"
        android:defaultValue="1"
        android:entries="@array/pref_temp_list_titles"
        android:entryValues="@array/pref_temp_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    </PreferenceCategory>

</PreferenceScreen>
